# nd75_screen

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: lessons-learned.md  protocol.md  rendering.md  weather-widget.md
nd75_screen/: __init__.py  __main__.py  daemon.py  hid.py  llm_gif.py  renderer.py
nd75_screen/cli/: llm.py  push.py  weather.py
nd75_screen/widgets/: weather.py
tests/: conftest.py  test_cli_llm.py  test_cli_push.py  test_cli_weather.py  test_daemon.py  test_hid.py  test_llm_gif.py  test_renderer.py  test_weather.py
